--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,15 @@ certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.2
 Flask==1.1.2
+flask-heroku==0.1.9
 Flask-WTF==0.14.3
+gunicorn==20.0.4
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 oauthlib==3.1.0
+psycopg2==2.8.5
 PySocks==1.7.1
 requests==2.23.0
 requests-oauthlib==1.3.0
