--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ chardet==3.0.4
 click==7.1.2
 Flask==1.1.2
 flask-heroku==0.1.9
+Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
 gunicorn==20.0.4
 idna==2.9
@@ -15,6 +16,7 @@ PySocks==1.7.1
 requests==2.23.0
 requests-oauthlib==1.3.0
 six==1.14.0
+SQLAlchemy==1.3.16
 tweepy==3.8.0
 urllib3==1.25.9
 Werkzeug==1.0.1
